Fixed under construction message, cropped photo

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -84,6 +84,14 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.rotate180 {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
